fix extra name overflow

--- a/Client/Components/ExtraListItem/ExtraListItem.razor.css
+++ b/Client/Components/ExtraListItem/ExtraListItem.razor.css
@@ -1,5 +1,9 @@
+::deep .first-block {
+  max-width: calc(100% - 6em);
+}
+
 .name {
-  max-width: calc(100% - 2.5em);
+  max-width: calc(100% - 3.5em);
   margin-left: 1em;
   font-size: 1.1em;
 }
